# powerpc-ports

./: .gitmodules  LICENSE  README.md
.github/: FUNDING.yml
R/R-ABM/: Portfile
R/R-AIPW/: Portfile
R/R-BCDAG/: Portfile
R/R-BFpack/: Portfile
R/R-BGGM/: Portfile
R/R-BH/: Portfile
R/R-BKT/: Portfile
R/R-BMA/: Portfile
R/R-BMisc/: Portfile
R/R-BayesChange/: Portfile
R/R-BayesMallows/: Portfile
R/R-BayesPPD/: Portfile
R/R-BayesTools/: Portfile
R/R-BayesVarSel/: Portfile
R/R-BayesXsrc/: Portfile
R/R-Bayesrel/: Portfile
R/R-BigVAR/: Portfile
R/R-BiocParallel/: Portfile
R/R-CDatanet/: Portfile
R/R-COMPoissonReg/: Portfile
R/R-CausalQueries/: Portfile
R/R-DescTools/: Portfile
R/R-Directional/: Portfile
R/R-DistributionUtils/: Portfile
R/R-DoseFinding/: Portfile
R/R-EcoMetrics/: Portfile
R/R-Epi/: Portfile
R/R-FBMS/: Portfile
R/R-FastGaSP/: Portfile
R/R-FuzzyNumbers/: Portfile
R/R-GAGAs/: Portfile
R/R-GaussianHMM1d/: Portfile
R/R-GenMarkov/: Portfile
R/R-GeneralizedHyperbolic/: Portfile
R/R-GpGp/: Portfile
R/R-HDTSA/: Portfile
R/R-HH/: Portfile
R/R-HIMA/: Portfile
R/R-HiddenMarkov/: Portfile
R/R-Hmisc/: Portfile
R/R-ISwR/: Portfile
R/R-ImpShrinkage/: Portfile
R/R-JFE/: Portfile
R/R-JuliaCall/: Portfile
R/R-KernSmooth/: Portfile
R/R-L1centrality/: Portfile
R/R-L1pack/: Portfile
R/R-LBI/: Portfile
R/R-LLMR/: Portfile
R/R-LMMsolver/: Portfile
R/R-LMest/: Portfile
R/R-LNPar/: Portfile
R/R-LaMa/: Portfile
R/R-MASS/: Portfile
R/R-MBBEFDLite/: Portfile
R/R-MCS/: Portfile
R/R-MEGB/: Portfile
R/R-MLE/: Portfile
R/R-MatchIt/: Portfile
R/R-Matrix/: Portfile
R/R-MatrixModels/: Portfile
R/R-Mhorseshoe/: Portfile
R/R-MiscMath/: Portfile
R/R-NNS/: Portfile
R/R-NormalLaplace/: Portfile
R/R-PAGFL/: Portfile
R/R-ParallelLogger/: Portfile
R/R-PearsonDS/: Portfile
R/R-PriceIndices/: Portfile
R/R-QF/: Portfile
R/R-QuickJSR/: Portfile
R/R-R2BayesX/: Portfile
R/R-R6/: Portfile
R/R-RBesT/: Portfile
R/R-RCurl/: Portfile
R/R-RDieHarder/: Portfile
R/R-RJSONIO/: Portfile
R/R-RMSS/: Portfile
R/R-RMySQL/: Portfile
R/R-RNetCDF/: Portfile
R/R-RPostgreSQL/: Portfile
R/R-RPostgres/: Portfile
R/R-RProtoBuf/: Portfile
R/R-RQuantLib/: Portfile
R/R-RSQLite/: Portfile
R/R-RStata/: Portfile
R/R-RTMB/: Portfile
R/R-RandVar/: Portfile
R/R-Rborist/: Portfile
R/R-Rcpp/: Portfile
R/R-RcppAlgos/: Portfile
R/R-RcppArmadillo/: Portfile
R/R-RcppBDT/: Portfile
R/R-RcppCGAL/: Portfile
R/R-RcppCWB/: Portfile
R/R-RcppDE/: Portfile
R/R-RcppDPR/: Portfile
R/R-RcppDate/: Portfile
R/R-RcppExamples/: Portfile
R/R-RcppFastFloat/: Portfile
R/R-RcppGetconf/: Portfile
R/R-RcppParallel/: Portfile
R/R-RcppRedis/: Portfile
R/R-RcppSimdJson/: Portfile
R/R-RcppSpdlog/: Portfile
R/R-RcppStreams/: Portfile
R/R-RcppTOML/: Portfile
R/R-RcppThread/: Portfile
R/R-RcppUUID/: Portfile
R/R-RcppZiggurat/: Portfile
R/R-Rdpack/: Portfile
R/R-RestRserve/: Portfile
R/R-Rfast/: Portfile
R/R-Rgof/: Portfile
R/R-Rmpi/: Portfile
R/R-RoBMA/: Portfile
R/R-RoBSA/: Portfile
R/R-Rtwobitlib/: Portfile
R/R-Rvcg/: Portfile
R/R-SSBtools/: Portfile
R/R-SSGL/: Portfile
R/R-SuppDists/: Portfile
R/R-TDboost/: Portfile
R/R-TH.data/: Portfile
R/R-TMB/: Portfile
R/R-TukeyGH77/: Portfile
R/R-VGAM/: Portfile
R/R-VGAMdata/: Portfile
R/R-VGAMextra/: Portfile
R/R-VIM/: Portfile
R/R-VineCopula/: Portfile
R/R-XML/: Portfile
R/R-accessibility/: Portfile
R/R-acepack/: Portfile
R/R-actuar/: Portfile
R/R-adbcdrivermanager/: Portfile
R/R-adbcpostgresql/: Portfile
R/R-adbcsqlite/: Portfile
R/R-ade4/: Portfile
R/R-admisc/: Portfile
R/R-aglm/: Portfile
R/R-aihuman/: Portfile
R/R-anticlust/: Portfile
R/R-anytime/: Portfile
R/R-apollo/: Portfile
R/R-archive/: Portfile
R/R-arrApply/: Portfile
R/R-arrow/: Portfile
R/R-arules/: Portfile
R/R-asd/: Portfile
R/R-assessor/: Portfile
R/R-astsa/: Portfile
R/R-atime/: Portfile
R/R-attachment/: Portfile
R/R-automap/: Portfile
R/R-av/: Portfile
R/R-baguette/: Portfile
R/R-basefun/: Portfile
R/R-bayesAB/: Portfile
R/R-bayesMeanScale/: Portfile
R/R-bayesdfa/: Portfile
R/R-bayesestdft/: Portfile
R/R-bayeslist/: Portfile
R/R-bayestestR/: Portfile
R/R-bbnet/: Portfile
R/R-bbotk/: Portfile
R/R-bdsm/: Portfile
R/R-bench/: Portfile
R/R-betaNB/: Portfile
R/R-betareg/: Portfile
R/R-bfp/: Portfile
R/R-bigergm/: Portfile
R/R-bigstep/: Portfile
R/R-bimets/: Portfile
R/R-bindr/: Portfile
R/R-bindrcpp/: Portfile
R/R-bit/: Portfile
R/R-bit64/: Portfile
R/R-bivpois/: Portfile
R/R-bizdays/: Portfile
R/R-blavaan/: Portfile
R/R-blob/: Portfile
R/R-bnlearn/: Portfile
R/R-bnns/: Portfile
R/R-bonsai/: Portfile
R/R-bookdown/: Portfile
R/R-bplsr/: Portfile
R/R-bpp/: Portfile
R/R-brms/: Portfile
R/R-broom/: Portfile
R/R-broom.helpers/: Portfile
R/R-brotli/: Portfile
R/R-bsitar/: Portfile
R/R-bslib/: Portfile
R/R-bspline/: Portfile
R/R-butcher/: Portfile
R/R-bvhar/: Portfile
R/R-carrier/: Portfile
R/R-cbq/: Portfile
R/R-cdid/: Portfile
R/R-censored/: Portfile
R/R-chatAI4R/: Portfile
R/R-cheapr/: Portfile
R/R-chk/: Portfile
R/R-chron/: Portfile
R/R-ciphertext/: Portfile
R/R-class/: Portfile
R/R-classInt/: Portfile
R/R-cld2/: Portfile
R/R-cld3/: Portfile
R/R-cli/: Portfile
R/R-clock/: Portfile
R/R-cluster/: Portfile
R/R-clusterCrit/: Portfile
R/R-clustermq/: Portfile
R/R-cnum/: Portfile
R/R-cobs/: Portfile
R/R-coconots/: Portfile
R/R-collapse/: Portfile
R/R-comets/: Portfile
R/R-commonmark/: Portfile
R/R-coneproj/: Portfile
R/R-connectcreds/: Portfile
R/R-constrainedKriging/: Portfile
R/R-copula/: Portfile
R/R-cpp11/: Portfile
R/R-cpp11armadillo/: Portfile
R/R-cppcontainers/: Portfile
R/R-crch/: Portfile
math/alglib/files/: CMakeLists.txt
shells/slash/files/: CMakeLists.txt  disku.cpp.patch  install_slash.cpp.patch  ls.cpp.patch  timespec.patch
(+6018 files in other folders)
